Uso de variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Oracle connection Settings
-spring.datasource.url=jdbc:oracle:thin:@//172.16.0.114:1538/DESARROLLO
-spring.datasource.username=acruz
-spring.datasource.password=Confia1801
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
